--- a/templates/modern/users.html
+++ b/templates/modern/users.html
@@ -43,6 +43,9 @@
                         <th>{% trans %}Template{% endtrans %}</th>
                         <th>{% trans %}Groups{% endtrans %}</th>
                         <th class="text-center">{% trans %}Auth Type{% endtrans %}</th>
+                        {% if mfa_enabled %}
+                        <th class="text-center">{% trans %}MFA{% endtrans %}</th>
+                        {% endif %}
                         <th class="text-center">{% trans %}Enabled{% endtrans %}</th>
                         <th class="text-end">{% trans %}Actions{% endtrans %}</th>
                     </tr>
@@ -105,6 +108,16 @@
                             {% endif %}
                         </td>
 
+                        {% if mfa_enabled %}
+                        <td class="text-center">
+                            {% if user['mfa_enabled'] %}
+                                <i class="bi bi-shield-fill-check text-success" title="{% trans %}MFA enabled{% endtrans %}"></i>
+                            {% else %}
+                                <i class="bi bi-shield text-muted" title="{% trans %}MFA not configured{% endtrans %}"></i>
+                            {% endif %}
+                        </td>
+                        {% endif %}
+
                         {% if user['uid'] != session_userid %}
                         <td class="text-center"><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }}></td>
                         {% else %}
@@ -156,6 +169,16 @@
                                 <span class="badge bg-secondary">{{ user['auth_type']|upper }}</span>
                             {% endif %}
                         </td>
+
+                        {% if mfa_enabled %}
+                        <td class="text-center">
+                            {% if user['mfa_enabled'] %}
+                                <i class="bi bi-shield-fill-check text-success" title="{% trans %}MFA enabled{% endtrans %}"></i>
+                            {% else %}
+                                <i class="bi bi-shield text-muted" title="{% trans %}MFA not configured{% endtrans %}"></i>
+                            {% endif %}
+                        </td>
+                        {% endif %}
 
                         <td class="text-center">
                             {% if user['active'] %}
