--- a/templates/default/list_forward_zones.html
+++ b/templates/default/list_forward_zones.html
@@ -201,7 +201,7 @@
             </div>
 
             {% if letter_start != 'all' %}
-            <div class='py-3'>
+            <div class="py-3">
                 {{ pagination | raw }}
             </div>
             {% endif %}
